--- a/blog/homepage.css
+++ b/blog/homepage.css
@@ -68,14 +68,26 @@ body {
 }
 
 /*  Title  */
-.div_title {
-	background-image: url( image/home.jpg );
+.div_title_1 {
+	background-image: url( image/popo1.jpg );
 	background-repeat: no-repeat;
 	background-size:  100%;
 	background-position: 0 -1em;
 
 	width: 70%;
-	height: 55%;
+	height: 65%;
+
+	margin: 0 auto;
+	padding: 0;
+}
+.div_title_2 {
+	background-image: url( image/popo2.jpg );
+	background-repeat: no-repeat;
+	background-size:  100%;
+	background-position: 0 -20em;
+
+	width: 70%;
+	height: 65%;
 
 	margin: 0 auto;
 	padding: 0;
